<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AfegirActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewNom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_name" />

            <EditText
                android:id="@+id/editTextNom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />

            <TextView
                android:id="@+id/textViewDireccio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_dir" />

            <EditText
                android:id="@+id/editTextDireccio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />

            <TextView
                android:id="@+id/textViewFix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_fix" />

            <EditText
                android:id="@+id/editTextFix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />

            <TextView
                android:id="@+id/textViewMobil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_mobil" />

            <EditText
                android:id="@+id/editTextMobil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_email" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />

            <TextView
                android:id="@+id/textViewFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_facebook" />

            <CheckBox
                android:id="@+id/checkBoxFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_facebook_check" />

            <TextView
                android:id="@+id/textViewGenere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_genere" />

			<RadioGroup
			    android:id="@+id/radioGenereGroup"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical">

	            <RadioButton
	                android:id="@+id/radioButtonHome"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:checked="true"
	                android:text="@string/add_radio_home" />
	
	            <RadioButton
	                android:id="@+id/radioButtonDona"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/add_radio_dona" />
            </RadioGroup>

            <TextView
                android:id="@+id/textViewTipus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_tipus" />

			<RadioGroup
			    android:id="@+id/radioTipusGroup"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical">
	            <RadioButton
	                android:id="@+id/radioButtonTreball"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/add_radio_treball"
	                android:checked="true" />
	
	            <RadioButton
	                android:id="@+id/radioButtonAmic"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/add_radio_amic" />
	            <RadioButton
	                android:id="@+id/radioButtonFamilia"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/add_radio_familia" />
            </RadioGroup>
            <Button
                android:id="@+id/buttonAfegir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_boto_afegir" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>
